# fake-news-detection-system

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  TruthLens_Final_Product_Roadmap.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
app/: main.py  schemas.py
configs/: baseline.yaml  classical.yaml  deep_learning.yaml  headline.yaml  transformer.yaml
data/sample/: sample_news.csv
docs/: stage_2_classical_models.md  stage_2_codebase_guide.md
notebooks/: 01_eda.ipynb  02_baseline_models.ipynb  03_deep_learning.ipynb  04_transformer_finetune.ipynb
scripts/: test_headlines.py  tune_threshold.py
src/data/: clean.py  load.py  loader.py  preprocess.py
src/features/: tfidf.py
src/models/: baseline.py  classic_ml.py  classical.py  compare.py  deep_compare.py  deep_learning.py  deep_pipeline.py  evaluate.py  inference.py  pipeline.py  predict.py  train.py  transformer.py
tests/: conftest.py  test_api.py  test_clean.py  test_compare.py  test_deep_learning.py  test_evaluate.py  test_loader.py  test_notebook.py  test_preprocess.py  test_tfidf.py  test_train_pipeline.py  test_transformer.py
utils/: config.py  logging.py  notebook.py
