[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detection"
version = "0.1.0"
description = "Modular misinformation intelligence platform"
readme = "PROJECT_CONTEXT.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "PyYAML>=6.0.0",
    "xgboost>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-cov>=5.0.0"]
api = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
notebook = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]
deep = ["torch>=2.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: integration tests that load the full raw dataset",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]
